fix sizing of nav on mobile view

--- a/themes/unya/sass/_navigation.scss
+++ b/themes/unya/sass/_navigation.scss
@@ -213,7 +213,7 @@ a {
 	left: 0;
 	right: 0;
 	flex-wrap: wrap;
-	height: 65vh;
+	height: 70vh;
 	z-index: 299;
 	.site-branding {
 		background: url('../../assets/images/Logo-White.png') no-repeat center;
